--- a/JudgeScores/JudgeScores.csproj
+++ b/JudgeScores/JudgeScores.csproj
@@ -69,6 +69,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=8.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005">
+      <HintPath>..\packages\AutoMapper.8.1.1\lib\net461\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -90,13 +94,19 @@
     <Reference Include="Windows.Gaming" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DashboardSettings.cs" />
+    <Compile Include="DashboardSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GamepadAction.cs" />
     <Compile Include="GamepadWatcher.cs" />
-    <Compile Include="JsonSettings.cs" />
-    <Compile Include="MainActionsType.cs" />
+    <Compile Include="JsonSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainActionsType.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Player.cs" />
-    <Compile Include="RandomTimers.cs" />
+    <Compile Include="RandomTimerSettings.cs" />
     <Compile Include="ScoresForm.cs">
       <SubType>Form</SubType>
     </Compile>
