--- a/JudgeScores/JudgeScores.csproj
+++ b/JudgeScores/JudgeScores.csproj
@@ -61,6 +61,14 @@
       <HintPath>..\packages\AutoMapper.8.1.1\lib\net461\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Gma.System.MouseKeyHook, Version=5.6.130.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\MouseKeyHook.5.6.0\lib\net40\Gma.System.MouseKeyHook.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MouseKeyboardActivityMonitor, Version=4.0.5150.10665, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\MouseKeyboardActivityMonitor.4.0.5150.10665\lib\net20\MouseKeyboardActivityMonitor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -82,6 +90,9 @@
     <Reference Include="Windows.Gaming" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionHandler.cs" />
+    <Compile Include="ActionProcessor.cs" />
+    <Compile Include="ActionsProvider.cs" />
     <Compile Include="DashboardSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,7 +101,7 @@
     <Compile Include="JsonSettings.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainActionsType.cs">
+    <Compile Include="MainActionTypes.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Player.cs" />
