Add undo action
# Conflicts:
#	JudgeScores/Player.cs

--- a/JudgeScores/JudgeScores.csproj
+++ b/JudgeScores/JudgeScores.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionHandler.cs" />
+    <Compile Include="ActionHistory.cs" />
     <Compile Include="ActionProcessor.cs" />
     <Compile Include="ActionsProvider.cs" />
     <Compile Include="DashboardSettings.cs">
